# MOVED__rustywiki-server

./: .gitignore  Cargo.toml  LICENSE  README.md  log4rs.yml
document/class/: class diagram(StarUML).mdj
document/database/: README.md
document/page/: README.md
document/page/specification/: P000.md  P001.md  P002.md  P003.md  P004.md  P005.md  P006.md  P007.md  P010.md  P011.md  P020.md  P021.md  P022.md  P023.md  P030.md  P100.md  P101.md  P102.md
document/requirements/: README.md
document/requirements/specification/: R000.md  R001.md  R002.md  R003.md  R004.md  R005.md  R006.md  R007.md  R008.md  R010.md  R011.md  R012.md  R013.md  R014.md  R015.md  R016.md  R017.md  R100.md  R101.md  R102.md  R103.md  R104.md  (+2 more)
document/use case/: README.md  Use Case Diagram(StarUML).mdj
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2020-12-28-133143_create/: down.sql  up.sql
restclient/: test.http
src/: main.rs  schema.rs
src/action/: access_doc.rs  mod.rs
src/env/: key.txt
src/lib/: auth_value.rs  connection.rs  constants.rs  jwt.rs  mod.rs  pagination.rs  password_hash.rs
src/middleware/: authorize.rs  logger.rs  mod.rs
src/models/: debate.rs  debate_comment.rs  document.rs  document_history.rs  file.rs  file_history.rs  mod.rs  refresh_token.rs  user.rs
src/param/: mod.rs
src/response/: mod.rs  shared.rs
src/routes/: auth.rs  debate.rs  doc.rs  file.rs  history.rs  image.rs  mod.rs  search.rs  user.rs
src/value/: auth.rs  debate.rs  debate_comment.rs  document_history.rs  mod.rs
static/html/: image_upload.html  test.html
