[package]
name = "rustywiki"
version = "0.0.1"
authors = ["rustywiki team"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-rt = "1"
actix-files = "0.4"
actix-service = "1.0.5"
actix-cors = "0.5.3"
log = "0.4.8"
log4rs = "0.13.0"
futures = "0.3.5"
listenfd = "0.3"
env_logger = "0.7"
diesel = { version= "1", features = ["postgres"] }
dotenv = "0.9.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "7.2.0"
epoch-timestamp = "1.0.0"
sha2 = "0.9.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }